:art: :sparkles: Add usage-based sorting for Emoji list
Fixes #1

--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,10 @@
             "name": "Jake A. Smith",
             "email": "theman@jakeasmith.com"
         }
-    ]
+    ],
+    "autoload": {
+        "psr-4": {
+            "Smacme\\Commit\\": "src"
+        }
+    }
 }
